[gd_scene load_steps=10 format=3 uid="uid://y30u0a43pem0"]

[ext_resource type="Script" uid="uid://5yh7f75okpyu" path="res://scenes/game_object/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://28csw3slg81r" path="res://scenes/game_object/player/player.png" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://ctnii82682m5b" path="res://scenes/ability/sword_ability/sword_ability_controller.tscn" id="2_lvxji"]
[ext_resource type="Script" uid="uid://creub2pntxrsb" path="res://scenes/component/health_component.gd" id="2_ss5pk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss5pk"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tj6oj"]
bg_color = Color(1, 0.439216, 0.427451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_s3670"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tj6oj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lvxji"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_ss5pk")
metadata/_custom_type_script = "uid://creub2pntxrsb"

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_lvxji")]

[node name="InvincibilityFramesTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gmlin")
offset = Vector2(0, -8)

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_ss5pk")
theme_override_styles/fill = SubResource("StyleBoxFlat_tj6oj")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="PickupCollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_s3670")

[node name="HurtCollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="HurtCollisionShape2D" type="CollisionShape2D" parent="HurtCollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_tj6oj")

[node name="TerrainCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_lvxji")
